# HRRocketAPI

./: Dockerfile  Makefile  README.md  alembic.ini  docker-compose-local.yaml  pyproject.toml
app/: main.py
app/api/api_v1/: __init__.py
app/api/api_v1/endpoints/: books.py
app/api/api_v1/schemas/: books.py
app/api/api_v1/services/: books.py
app/api/database/: __init__.py  database.py
app/api/database/models/: books.py
app/core/: settings.py
migrations/: env.py
migrations/versions/: 87b2ec10daf5_.py
tests/: conftest.py  test_api.py
